[package]
name = "challenge_1_base64"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2021"

[lib]
name = "base64_lib"
path = "src/lib.rs"

[[bin]]
name = "hex2base64"
path = "src/main.rs"

[dependencies]
crypto_helper = {path = "../crypto_helper", version = "0.1.0"}
base64 = {version = "0.22.1" }
hex = {version = "0.4.3" }
